cli/crates/core/tests/snapshots/test_parser__parse_typescript@main.tsx-2.snap
---
source: crates/core/tests/test_parser.rs
expression: "&parser::Module::new(&RelativePathBuf::from_path(path.strip_prefix(&project_root).unwrap()).unwrap(),\n&project_root, &module_resolver,).unwrap()"
input_file: samples/typescript/src/module-decls/wildcard-export/main.tsx
---
source_path: src/module-decls/wildcard-export/main.tsx
id:
  hash: "15000415410269651374"
  path: src/module-decls/wildcard-export/main.tsx
  package_name: UNKNOWN
  mtype: local
created_at: ~
updated_at: ~
exports:
  - source:
      Internal: "Main#1"
    exported_name: Main
declarations:
  - symbol: "Main#1"
    source:
      hash: "15000415410269651374"
      path: src/module-decls/wildcard-export/main.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<declaration>"
    inferred_type:
      Function:
        - ReturnTypeOf:
            - ReturnTypeOf:
                - TypeOf:
                    symbol:
                      symbol: "sample#1"
                      source:
                        hash: "15000415410269651374"
                        path: src/module-decls/wildcard-export/main.tsx
                        package_name: UNKNOWN
                        mtype: local
                    is_local: true
                - []
            - []
    start:
      line: 4
      column: 8
    end:
      line: 6
      column: 2
  - symbol: "React#1"
    source:
      hash: "15000415410269651374"
      path: src/module-decls/wildcard-export/main.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "ExternalSymbol<SymbolWithSource { symbol: Symbol { name: Atom('default' type=static), context: #0 }, source: ModuleId { hash: 11002248552354871051, path: \"\", pkg_name: \"react\", mtype: Package } }>"
    inferred_type:
      TypeOf:
        symbol:
          symbol: "default#0"
          source:
            hash: "11002248552354871051"
            path: ""
            package_name: react
            mtype: package
        is_local: false
    start:
      line: 1
      column: 8
    end:
      line: 1
      column: 13
  - symbol: "sample#1"
    source:
      hash: "15000415410269651374"
      path: src/module-decls/wildcard-export/main.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "ExternalSymbol<SymbolWithSource { symbol: Symbol { name: Atom('sample' type=inline), context: #1 }, source: ModuleId { hash: 4214781875961314466, path: \"src/module-decls/wildcard-export/exporter\", pkg_name: \"UNKNOWN\", mtype: Local } }>"
    inferred_type:
      TypeOf:
        symbol:
          symbol: "sample#1"
          source:
            hash: "4214781875961314466"
            path: src/module-decls/wildcard-export/exporter
            package_name: UNKNOWN
            mtype: local
        is_local: false
    start:
      line: 2
      column: 10
    end:
      line: 2
      column: 16
scopes:
  - owner: "__global#0"
    parent: ~
    children:
      - "Main#1"
      - "Main#1"
    references:
      - "Main#1"
      - "React#1"
      - "sample#1"
    jsx_references: []
  - owner: "Main#1"
    parent: "__global#0"
    children: []
    references:
      - "sample#1"
    jsx_references: []
  - owner: "Main#1"
    parent: "__global#0"
    children: []
    references:
      - "sample#1"
    jsx_references: []
body:
  - type: ImportDeclaration
    span:
      start: 1
      end: 27
      ctxt: 0
    specifiers:
      - type: ImportDefaultSpecifier
        span:
          start: 8
          end: 13
          ctxt: 0
        local:
          type: Identifier
          span:
            start: 8
            end: 13
            ctxt: 1
          value: React
          optional: false
    source:
      type: StringLiteral
      span:
        start: 19
        end: 26
        ctxt: 0
      value: react
      raw: "\"react\""
    typeOnly: false
    asserts: ~
  - type: ImportDeclaration
    span:
      start: 28
      end: 64
      ctxt: 0
    specifiers:
      - type: ImportSpecifier
        span:
          start: 37
          end: 43
          ctxt: 0
        local:
          type: Identifier
          span:
            start: 37
            end: 43
            ctxt: 1
          value: sample
          optional: false
        imported: ~
        isTypeOnly: false
    source:
      type: StringLiteral
      span:
        start: 51
        end: 63
        ctxt: 0
      value: "./exporter"
      raw: "\"./exporter\""
    typeOnly: false
    asserts: ~
  - type: ExportDeclaration
    span:
      start: 66
      end: 115
      ctxt: 0
    declaration:
      async: false
      body:
        type: BlockStatement
        span:
          start: 89
          end: 115
          ctxt: 0
        stmts:
          - type: ReturnStatement
            span:
              start: 95
              end: 113
              ctxt: 0
            argument:
              type: CallExpression
              span:
                start: 102
                end: 112
                ctxt: 0
              callee:
                type: CallExpression
                span:
                  start: 102
                  end: 110
                  ctxt: 0
                callee:
                  type: Identifier
                  span:
                    start: 102
                    end: 108
                    ctxt: 1
                  value: sample
                  optional: false
                arguments: []
                typeArguments: ~
              arguments: []
              typeArguments: ~
      declare: false
      decorators: []
      generator: false
      identifier:
        type: Identifier
        span:
          start: 82
          end: 86
          ctxt: 1
        value: Main
        optional: false
      params: []
      returnType: ~
      span:
        start: 73
        end: 115
        ctxt: 0
      type: FunctionDeclaration
      typeParameters: ~
