cli/crates/core/tests/snapshots/test_parser__parse_typescript@main.tsx-3.snap
---
source: crates/core/tests/test_parser.rs
expression: "&parser::Module::new(&RelativePathBuf::from_path(path.strip_prefix(&project_root).unwrap()).unwrap(),\n&project_root, &module_resolver,).unwrap()"
input_file: samples/typescript/src/module-decls/wildcard-import/main.tsx
---
source_path: src/module-decls/wildcard-import/main.tsx
id:
  hash: "10135531623480917301"
  path: src/module-decls/wildcard-import/main.tsx
  package_name: UNKNOWN
  mtype: local
created_at: ~
updated_at: ~
exports:
  - source:
      Internal: "Main#1"
    exported_name: Main
declarations:
  - symbol: "Main#1"
    source:
      hash: "10135531623480917301"
      path: src/module-decls/wildcard-import/main.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<declaration>"
    inferred_type:
      Function:
        - ReturnTypeOf:
            - ReturnTypeOf:
                - MemberOf:
                    - TypeOf:
                        symbol:
                          symbol: "exporter#1"
                          source:
                            hash: "10135531623480917301"
                            path: src/module-decls/wildcard-import/main.tsx
                            package_name: UNKNOWN
                            mtype: local
                        is_local: true
                    - Object: sample
                - []
            - []
    start:
      line: 4
      column: 8
    end:
      line: 6
      column: 2
  - symbol: "React#1"
    source:
      hash: "10135531623480917301"
      path: src/module-decls/wildcard-import/main.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "ExternalSymbol<SymbolWithSource { symbol: Symbol { name: Atom('default' type=static), context: #0 }, source: ModuleId { hash: 11002248552354871051, path: \"\", pkg_name: \"react\", mtype: Package } }>"
    inferred_type:
      TypeOf:
        symbol:
          symbol: "default#0"
          source:
            hash: "11002248552354871051"
            path: ""
            package_name: react
            mtype: package
        is_local: false
    start:
      line: 1
      column: 8
    end:
      line: 1
      column: 13
  - symbol: "exporter#1"
    source:
      hash: "10135531623480917301"
      path: src/module-decls/wildcard-import/main.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "ExternalSymbol<SymbolWithSource { symbol: Symbol { name: Atom('<wildcard>' type=dynamic), context: #0 }, source: ModuleId { hash: 8677053067410111665, path: \"src/module-decls/wildcard-import/exporter\", pkg_name: \"UNKNOWN\", mtype: Local } }>"
    inferred_type:
      TypeOf:
        symbol:
          symbol: "<wildcard>#0"
          source:
            hash: "8677053067410111665"
            path: src/module-decls/wildcard-import/exporter
            package_name: UNKNOWN
            mtype: local
        is_local: false
    start:
      line: 2
      column: 8
    end:
      line: 2
      column: 21
scopes:
  - owner: "__global#0"
    parent: ~
    children:
      - "Main#1"
      - "Main#1"
    references:
      - "Main#1"
      - "React#1"
      - "exporter#1"
      - "sample#0"
    jsx_references: []
  - owner: "Main#1"
    parent: "__global#0"
    children: []
    references:
      - "exporter#1"
      - "sample#0"
    jsx_references: []
  - owner: "Main#1"
    parent: "__global#0"
    children: []
    references:
      - "exporter#1"
      - "sample#0"
    jsx_references: []
body:
  - type: ImportDeclaration
    span:
      start: 1
      end: 27
      ctxt: 0
    specifiers:
      - type: ImportDefaultSpecifier
        span:
          start: 8
          end: 13
          ctxt: 0
        local:
          type: Identifier
          span:
            start: 8
            end: 13
            ctxt: 1
          value: React
          optional: false
    source:
      type: StringLiteral
      span:
        start: 19
        end: 26
        ctxt: 0
      value: react
      raw: "\"react\""
    typeOnly: false
    asserts: ~
  - type: ImportDeclaration
    span:
      start: 28
      end: 67
      ctxt: 0
    specifiers:
      - type: ImportNamespaceSpecifier
        span:
          start: 35
          end: 48
          ctxt: 0
        local:
          type: Identifier
          span:
            start: 40
            end: 48
            ctxt: 1
          value: exporter
          optional: false
    source:
      type: StringLiteral
      span:
        start: 54
        end: 66
        ctxt: 0
      value: "./exporter"
      raw: "\"./exporter\""
    typeOnly: false
    asserts: ~
  - type: ExportDeclaration
    span:
      start: 69
      end: 127
      ctxt: 0
    declaration:
      async: false
      body:
        type: BlockStatement
        span:
          start: 92
          end: 127
          ctxt: 0
        stmts:
          - type: ReturnStatement
            span:
              start: 98
              end: 125
              ctxt: 0
            argument:
              type: CallExpression
              span:
                start: 105
                end: 124
                ctxt: 0
              callee:
                type: CallExpression
                span:
                  start: 105
                  end: 122
                  ctxt: 0
                callee:
                  type: MemberExpression
                  span:
                    start: 105
                    end: 120
                    ctxt: 0
                  object:
                    type: Identifier
                    span:
                      start: 105
                      end: 113
                      ctxt: 1
                    value: exporter
                    optional: false
                  property:
                    type: Identifier
                    span:
                      start: 114
                      end: 120
                      ctxt: 0
                    value: sample
                    optional: false
                arguments: []
                typeArguments: ~
              arguments: []
              typeArguments: ~
      declare: false
      decorators: []
      generator: false
      identifier:
        type: Identifier
        span:
          start: 85
          end: 89
          ctxt: 1
        value: Main
        optional: false
      params: []
      returnType: ~
      span:
        start: 76
        end: 127
        ctxt: 0
      type: FunctionDeclaration
      typeParameters: ~
