cli/crates/core/tests/snapshots/test_parser__parse_typescript@main.tsx-4.snap
---
source: crates/core/tests/test_parser.rs
expression: "&parser::Module::new(&RelativePathBuf::from_path(path.strip_prefix(&project_root).unwrap()).unwrap(),\n&project_root, &module_resolver,).unwrap()"
input_file: samples/typescript/src/simple/main.tsx
---
source_path: src/simple/main.tsx
id:
  hash: "9140074414188734769"
  path: src/simple/main.tsx
  package_name: UNKNOWN
  mtype: local
created_at: ~
updated_at: ~
exports:
  - source:
      Internal: "MainPage#1"
    exported_name: default
declarations:
  - symbol: "BackButton#1"
    source:
      hash: "9140074414188734769"
      path: src/simple/main.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "ExternalSymbol<SymbolWithSource { symbol: Symbol { name: Atom('BackButton' type=dynamic), context: #1 }, source: ModuleId { hash: 6711003159110202606, path: \"src/simple/components/newNavigation\", pkg_name: \"UNKNOWN\", mtype: Local } }>"
    inferred_type:
      TypeOf:
        symbol:
          symbol: "BackButton#1"
          source:
            hash: "6711003159110202606"
            path: src/simple/components/newNavigation
            package_name: UNKNOWN
            mtype: local
        is_local: false
    start:
      line: 1
      column: 34
    end:
      line: 1
      column: 44
  - symbol: "HeaderNew#1"
    source:
      hash: "9140074414188734769"
      path: src/simple/main.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "ExternalSymbol<SymbolWithSource { symbol: Symbol { name: Atom('HeaderNew' type=dynamic), context: #1 }, source: ModuleId { hash: 6711003159110202606, path: \"src/simple/components/newNavigation\", pkg_name: \"UNKNOWN\", mtype: Local } }>"
    inferred_type:
      TypeOf:
        symbol:
          symbol: "HeaderNew#1"
          source:
            hash: "6711003159110202606"
            path: src/simple/components/newNavigation
            package_name: UNKNOWN
            mtype: local
        is_local: false
    start:
      line: 1
      column: 10
    end:
      line: 1
      column: 19
  - symbol: "MainPage#1"
    source:
      hash: "9140074414188734769"
      path: src/simple/main.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<expression>"
    inferred_type:
      Function:
        - JSX
    start:
      line: 3
      column: 16
    end:
      line: 11
      column: 2
  - symbol: "UserMenuNew#1"
    source:
      hash: "9140074414188734769"
      path: src/simple/main.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "ExternalSymbol<SymbolWithSource { symbol: Symbol { name: Atom('UserMenuNew' type=dynamic), context: #1 }, source: ModuleId { hash: 6711003159110202606, path: \"src/simple/components/newNavigation\", pkg_name: \"UNKNOWN\", mtype: Local } }>"
    inferred_type:
      TypeOf:
        symbol:
          symbol: "UserMenuNew#1"
          source:
            hash: "6711003159110202606"
            path: src/simple/components/newNavigation
            package_name: UNKNOWN
            mtype: local
        is_local: false
    start:
      line: 1
      column: 21
    end:
      line: 1
      column: 32
scopes:
  - owner: "__global#0"
    parent: ~
    children:
      - "MainPage#1"
      - "MainPage#1"
    references:
      - "BackButton#1"
      - "HeaderNew#1"
      - "MainPage#1"
      - "UserMenuNew#1"
    jsx_references:
      - "BackButton#1"
      - "HeaderNew#1"
      - "UserMenuNew#1"
  - owner: "MainPage#1"
    parent: "__global#0"
    children: []
    references:
      - "BackButton#1"
      - "HeaderNew#1"
      - "UserMenuNew#1"
    jsx_references:
      - "BackButton#1"
      - "HeaderNew#1"
      - "UserMenuNew#1"
  - owner: "MainPage#1"
    parent: "__global#0"
    children: []
    references:
      - "BackButton#1"
      - "HeaderNew#1"
      - "UserMenuNew#1"
    jsx_references:
      - "BackButton#1"
      - "HeaderNew#1"
      - "UserMenuNew#1"
body:
  - type: ImportDeclaration
    span:
      start: 1
      end: 81
      ctxt: 0
    specifiers:
      - type: ImportSpecifier
        span:
          start: 10
          end: 19
          ctxt: 0
        local:
          type: Identifier
          span:
            start: 10
            end: 19
            ctxt: 1
          value: HeaderNew
          optional: false
        imported: ~
        isTypeOnly: false
      - type: ImportSpecifier
        span:
          start: 21
          end: 32
          ctxt: 0
        local:
          type: Identifier
          span:
            start: 21
            end: 32
            ctxt: 1
          value: UserMenuNew
          optional: false
        imported: ~
        isTypeOnly: false
      - type: ImportSpecifier
        span:
          start: 34
          end: 44
          ctxt: 0
        local:
          type: Identifier
          span:
            start: 34
            end: 44
            ctxt: 1
          value: BackButton
          optional: false
        imported: ~
        isTypeOnly: false
    source:
      type: StringLiteral
      span:
        start: 52
        end: 80
        ctxt: 0
      value: "./components/newNavigation"
      raw: "\"./components/newNavigation\""
    typeOnly: false
    asserts: ~
  - type: ExportDefaultDeclaration
    span:
      start: 83
      end: 255
      ctxt: 0
    decl:
      async: false
      body:
        type: BlockStatement
        span:
          start: 118
          end: 255
          ctxt: 0
        stmts:
          - type: ReturnStatement
            span:
              start: 124
              end: 253
              ctxt: 0
            argument:
              type: ParenthesisExpression
              span:
                start: 131
                end: 252
                ctxt: 0
              expression:
                type: JSXElement
                span:
                  start: 141
                  end: 246
                  ctxt: 0
                opening:
                  type: JSXOpeningElement
                  name:
                    type: Identifier
                    span:
                      start: 142
                      end: 151
                      ctxt: 1
                    value: HeaderNew
                    optional: false
                  span:
                    start: 141
                    end: 152
                    ctxt: 0
                  attributes: []
                  selfClosing: false
                  typeArguments: ~
                children:
                  - type: JSXText
                    span:
                      start: 152
                      end: 165
                      ctxt: 0
                    value: "\n\n            "
                    raw: "\n\n            "
                  - type: JSXElement
                    span:
                      start: 165
                      end: 178
                      ctxt: 0
                    opening:
                      type: JSXOpeningElement
                      name:
                        type: Identifier
                        span:
                          start: 166
                          end: 176
                          ctxt: 1
                        value: BackButton
                        optional: false
                      span:
                        start: 165
                        end: 178
                        ctxt: 0
                      attributes: []
                      selfClosing: true
                      typeArguments: ~
                    children: []
                    closing: ~
                  - type: JSXText
                    span:
                      start: 178
                      end: 191
                      ctxt: 0
                    value: "\n\n            "
                    raw: "\n\n            "
                  - type: JSXElement
                    span:
                      start: 191
                      end: 205
                      ctxt: 0
                    opening:
                      type: JSXOpeningElement
                      name:
                        type: Identifier
                        span:
                          start: 192
                          end: 203
                          ctxt: 1
                        value: UserMenuNew
                        optional: false
                      span:
                        start: 191
                        end: 205
                        ctxt: 0
                      attributes: []
                      selfClosing: true
                      typeArguments: ~
                    children: []
                    closing: ~
                  - type: JSXText
                    span:
                      start: 205
                      end: 234
                      ctxt: 0
                    value: "\n\n            Content\n\n        "
                    raw: "\n\n            Content\n\n        "
                closing:
                  type: JSXClosingElement
                  span:
                    start: 234
                    end: 246
                    ctxt: 0
                  name:
                    type: Identifier
                    span:
                      start: 236
                      end: 245
                      ctxt: 1
                    value: HeaderNew
                    optional: false
      decorators: []
      generator: false
      identifier:
        type: Identifier
        span:
          start: 107
          end: 115
          ctxt: 1
        value: MainPage
        optional: false
      params: []
      returnType: ~
      span:
        start: 98
        end: 255
        ctxt: 0
      type: FunctionExpression
      typeParameters: ~

