cli/crates/core/tests/snapshots/test_parser__parse_typescript@redeclare-import.tsx-2.snap
---
source: crates/core/tests/test_parser.rs
expression: "&parser::Module::new(&RelativePathBuf::from_path(path.strip_prefix(&project_root).unwrap()).unwrap(),\n&project_root, &module_resolver,).unwrap()"
input_file: samples/typescript/src/wildcard-import/redeclare-import.tsx
---
source_path: src/wildcard-import/redeclare-import.tsx
id:
  hash: "7128159823283162876"
  path: src/wildcard-import/redeclare-import.tsx
  package_name: UNKNOWN
  mtype: local
created_at: ~
updated_at: ~
exports:
  - source:
      Internal: "RedeclareImport#1"
    exported_name: RedeclareImport
declarations:
  - symbol: "ComponentFromDestructedObject#1"
    source:
      hash: "7128159823283162876"
      path: src/wildcard-import/redeclare-import.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<expression>"
    inferred_type:
      MemberOf:
        - TypeOf:
            symbol:
              symbol: "DS#1"
              source:
                hash: "7128159823283162876"
                path: src/wildcard-import/redeclare-import.tsx
                package_name: UNKNOWN
                mtype: local
            is_local: true
        - Object: Button
    start:
      line: 5
      column: 17
    end:
      line: 5
      column: 46
  - symbol: "DS#1"
    source:
      hash: "7128159823283162876"
      path: src/wildcard-import/redeclare-import.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "ExternalSymbol<SymbolWithSource { symbol: Symbol { name: Atom('<wildcard>' type=dynamic), context: #0 }, source: ModuleId { hash: 14625591195093695410, path: \"src/wildcard-import/ds\", pkg_name: \"UNKNOWN\", mtype: Local } }>"
    inferred_type:
      TypeOf:
        symbol:
          symbol: "<wildcard>#0"
          source:
            hash: "14625591195093695410"
            path: src/wildcard-import/ds
            package_name: UNKNOWN
            mtype: local
        is_local: false
    start:
      line: 2
      column: 8
    end:
      line: 2
      column: 15
  - symbol: "React#1"
    source:
      hash: "7128159823283162876"
      path: src/wildcard-import/redeclare-import.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "ExternalSymbol<SymbolWithSource { symbol: Symbol { name: Atom('default' type=static), context: #0 }, source: ModuleId { hash: 11002248552354871051, path: \"\", pkg_name: \"react\", mtype: Package } }>"
    inferred_type:
      TypeOf:
        symbol:
          symbol: "default#0"
          source:
            hash: "11002248552354871051"
            path: ""
            package_name: react
            mtype: package
        is_local: false
    start:
      line: 1
      column: 8
    end:
      line: 1
      column: 13
  - symbol: "RedeclareImport#1"
    source:
      hash: "7128159823283162876"
      path: src/wildcard-import/redeclare-import.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<declaration>"
    inferred_type:
      Function:
        - JSX
    start:
      line: 6
      column: 8
    end:
      line: 13
      column: 2
  - symbol: "RedeclaredComponent#1"
    source:
      hash: "7128159823283162876"
      path: src/wildcard-import/redeclare-import.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<expression>"
    inferred_type:
      MemberOf:
        - TypeOf:
            symbol:
              symbol: "DS#1"
              source:
                hash: "7128159823283162876"
                path: src/wildcard-import/redeclare-import.tsx
                package_name: UNKNOWN
                mtype: local
            is_local: true
        - Object: Button
    start:
      line: 4
      column: 7
    end:
      line: 4
      column: 26
scopes:
  - owner: "__global#0"
    parent: ~
    children:
      - "RedeclaredComponent#1"
      - "ComponentFromDestructedObject#1"
      - "RedeclareImport#1"
      - "RedeclareImport#1"
    references:
      - "Button#0"
      - "ComponentFromDestructedObject#1"
      - "DS#1"
      - "React#1"
      - "RedeclareImport#1"
      - "RedeclaredComponent#1"
    jsx_references:
      - "ComponentFromDestructedObject#1"
      - "RedeclaredComponent#1"
  - owner: "RedeclaredComponent#1"
    parent: "__global#0"
    children: []
    references:
      - "Button#0"
      - "DS#1"
    jsx_references: []
  - owner: "ComponentFromDestructedObject#1"
    parent: "__global#0"
    children: []
    references:
      - "DS#1"
    jsx_references: []
  - owner: "RedeclareImport#1"
    parent: "__global#0"
    children: []
    references:
      - "ComponentFromDestructedObject#1"
      - "RedeclaredComponent#1"
    jsx_references:
      - "ComponentFromDestructedObject#1"
      - "RedeclaredComponent#1"
  - owner: "RedeclareImport#1"
    parent: "__global#0"
    children: []
    references:
      - "ComponentFromDestructedObject#1"
      - "RedeclaredComponent#1"
    jsx_references:
      - "ComponentFromDestructedObject#1"
      - "RedeclaredComponent#1"
body:
  - type: ImportDeclaration
    span:
      start: 1
      end: 27
      ctxt: 0
    specifiers:
      - type: ImportDefaultSpecifier
        span:
          start: 8
          end: 13
          ctxt: 0
        local:
          type: Identifier
          span:
            start: 8
            end: 13
            ctxt: 1
          value: React
          optional: false
    source:
      type: StringLiteral
      span:
        start: 19
        end: 26
        ctxt: 0
      value: react
      raw: "\"react\""
    typeOnly: false
    asserts: ~
  - type: ImportDeclaration
    span:
      start: 28
      end: 55
      ctxt: 0
    specifiers:
      - type: ImportNamespaceSpecifier
        span:
          start: 35
          end: 42
          ctxt: 0
        local:
          type: Identifier
          span:
            start: 40
            end: 42
            ctxt: 1
          value: DS
          optional: false
    source:
      type: StringLiteral
      span:
        start: 48
        end: 54
        ctxt: 0
      value: "./ds"
      raw: "\"./ds\""
    typeOnly: false
    asserts: ~
  - type: VariableDeclaration
    span:
      start: 57
      end: 95
      ctxt: 0
    kind: const
    declare: false
    declarations:
      - type: VariableDeclarator
        span:
          start: 63
          end: 94
          ctxt: 0
        id:
          optional: false
          span:
            start: 63
            end: 82
            ctxt: 1
          type: Identifier
          typeAnnotation: ~
          value: RedeclaredComponent
        init:
          type: MemberExpression
          span:
            start: 85
            end: 94
            ctxt: 0
          object:
            type: Identifier
            span:
              start: 85
              end: 87
              ctxt: 1
            value: DS
            optional: false
          property:
            type: Identifier
            span:
              start: 88
              end: 94
              ctxt: 0
            value: Button
            optional: false
        definite: false
  - type: VariableDeclaration
    span:
      start: 96
      end: 149
      ctxt: 0
    kind: const
    declare: false
    declarations:
      - type: VariableDeclarator
        span:
          start: 102
          end: 148
          ctxt: 0
        id:
          type: ObjectPattern
          span:
            start: 102
            end: 143
            ctxt: 0
          properties:
            - type: KeyValuePatternProperty
              key:
                type: Identifier
                span:
                  start: 104
                  end: 110
                  ctxt: 0
                value: Button
                optional: false
              value:
                optional: false
                span:
                  start: 112
                  end: 141
                  ctxt: 1
                type: Identifier
                typeAnnotation: ~
                value: ComponentFromDestructedObject
          optional: false
          typeAnnotation: ~
        init:
          type: Identifier
          span:
            start: 146
            end: 148
            ctxt: 1
          value: DS
          optional: false
        definite: false
  - type: ExportDeclaration
    span:
      start: 150
      end: 311
      ctxt: 0
    declaration:
      async: false
      body:
        type: BlockStatement
        span:
          start: 184
          end: 311
          ctxt: 0
        stmts:
          - type: ReturnStatement
            span:
              start: 190
              end: 309
              ctxt: 0
            argument:
              type: ParenthesisExpression
              span:
                start: 197
                end: 308
                ctxt: 0
              expression:
                type: JSXFragment
                span:
                  start: 207
                  end: 302
                  ctxt: 0
                opening:
                  type: JSXOpeningFragment
                  span:
                    start: 207
                    end: 209
                    ctxt: 0
                children:
                  - type: JSXText
                    span:
                      start: 209
                      end: 222
                      ctxt: 0
                    value: "\n\n            "
                    raw: "\n\n            "
                  - type: JSXElement
                    span:
                      start: 222
                      end: 244
                      ctxt: 0
                    opening:
                      type: JSXOpeningElement
                      name:
                        type: Identifier
                        span:
                          start: 223
                          end: 242
                          ctxt: 1
                        value: RedeclaredComponent
                        optional: false
                      span:
                        start: 222
                        end: 244
                        ctxt: 0
                      attributes: []
                      selfClosing: true
                      typeArguments: ~
                    children: []
                    closing: ~
                  - type: JSXText
                    span:
                      start: 244
                      end: 257
                      ctxt: 0
                    value: "\n\n            "
                    raw: "\n\n            "
                  - type: JSXElement
                    span:
                      start: 257
                      end: 290
                      ctxt: 0
                    opening:
                      type: JSXOpeningElement
                      name:
                        type: Identifier
                        span:
                          start: 258
                          end: 287
                          ctxt: 1
                        value: ComponentFromDestructedObject
                        optional: false
                      span:
                        start: 257
                        end: 290
                        ctxt: 0
                      attributes: []
                      selfClosing: true
                      typeArguments: ~
                    children: []
                    closing: ~
                  - type: JSXText
                    span:
                      start: 290
                      end: 299
                      ctxt: 0
                    value: "\n\n        "
                    raw: "\n\n        "
                closing:
                  type: JSXClosingFragment
                  span:
                    start: 299
                    end: 302
                    ctxt: 0
      declare: false
      decorators: []
      generator: false
      identifier:
        type: Identifier
        span:
          start: 166
          end: 181
          ctxt: 1
        value: RedeclareImport
        optional: false
      params: []
      returnType: ~
      span:
        start: 157
        end: 311
        ctxt: 0
      type: FunctionDeclaration
      typeParameters: ~
