cli/crates/core/tests/snapshots/test_parser__parse_typescript@sample.tsx-2.snap
---
source: crates/core/tests/test_parser.rs
expression: "&parser::Module::new(&RelativePathBuf::from_path(path.strip_prefix(&project_root).unwrap()).unwrap(),\n&project_root, &module_resolver,).unwrap()"
input_file: samples/typescript/src/module-decls/wildcard-import/sample.tsx
---
source_path: src/module-decls/wildcard-import/sample.tsx
id:
  hash: "16957890942232978691"
  path: src/module-decls/wildcard-import/sample.tsx
  package_name: UNKNOWN
  mtype: local
created_at: ~
updated_at: ~
exports:
  - source:
      Internal: "sample#1"
    exported_name: sample
declarations:
  - symbol: "React#1"
    source:
      hash: "16957890942232978691"
      path: src/module-decls/wildcard-import/sample.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "ExternalSymbol<SymbolWithSource { symbol: Symbol { name: Atom('default' type=static), context: #0 }, source: ModuleId { hash: 11002248552354871051, path: \"\", pkg_name: \"react\", mtype: Package } }>"
    inferred_type:
      TypeOf:
        symbol:
          symbol: "default#0"
          source:
            hash: "11002248552354871051"
            path: ""
            package_name: react
            mtype: package
        is_local: false
    start:
      line: 1
      column: 8
    end:
      line: 1
      column: 13
  - symbol: "sample#1"
    source:
      hash: "16957890942232978691"
      path: src/module-decls/wildcard-import/sample.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<declaration>"
    inferred_type:
      Function:
        - Function:
            - JSX
    start:
      line: 3
      column: 8
    end:
      line: 5
      column: 2
scopes:
  - owner: "__global#0"
    parent: ~
    children:
      - "sample#1"
      - "sample#1"
    references:
      - "React#1"
      - "div#2"
      - "sample#1"
    jsx_references:
      - "div#2"
  - owner: "sample#1"
    parent: "__global#0"
    children: []
    references:
      - "div#2"
    jsx_references:
      - "div#2"
  - owner: "sample#1"
    parent: "__global#0"
    children: []
    references:
      - "div#2"
    jsx_references:
      - "div#2"
body:
  - type: ImportDeclaration
    span:
      start: 1
      end: 27
      ctxt: 0
    specifiers:
      - type: ImportDefaultSpecifier
        span:
          start: 8
          end: 13
          ctxt: 0
        local:
          type: Identifier
          span:
            start: 8
            end: 13
            ctxt: 1
          value: React
          optional: false
    source:
      type: StringLiteral
      span:
        start: 19
        end: 26
        ctxt: 0
      value: react
      raw: "\"react\""
    typeOnly: false
    asserts: ~
  - type: ExportDeclaration
    span:
      start: 29
      end: 93
      ctxt: 0
    declaration:
      async: false
      body:
        type: BlockStatement
        span:
          start: 54
          end: 93
          ctxt: 0
        stmts:
          - type: ReturnStatement
            span:
              start: 60
              end: 91
              ctxt: 0
            argument:
              type: ArrowFunctionExpression
              span:
                start: 67
                end: 90
                ctxt: 0
              params: []
              body:
                type: JSXElement
                span:
                  start: 73
                  end: 90
                  ctxt: 0
                opening:
                  type: JSXOpeningElement
                  name:
                    type: Identifier
                    span:
                      start: 74
                      end: 77
                      ctxt: 2
                    value: div
                    optional: false
                  span:
                    start: 73
                    end: 78
                    ctxt: 0
                  attributes: []
                  selfClosing: false
                  typeArguments: ~
                children:
                  - type: JSXText
                    span:
                      start: 78
                      end: 84
                      ctxt: 0
                    value: sample
                    raw: sample
                closing:
                  type: JSXClosingElement
                  span:
                    start: 84
                    end: 90
                    ctxt: 0
                  name:
                    type: Identifier
                    span:
                      start: 86
                      end: 89
                      ctxt: 2
                    value: div
                    optional: false
              async: false
              generator: false
              typeParameters: ~
              returnType: ~
      declare: false
      decorators: []
      generator: false
      identifier:
        type: Identifier
        span:
          start: 45
          end: 51
          ctxt: 1
        value: sample
        optional: false
      params: []
      returnType: ~
      span:
        start: 36
        end: 93
        ctxt: 0
      type: FunctionDeclaration
      typeParameters: ~
